# sparsely-activated-networks

./: .dockerignore  .gitignore  CITATION  CITATION.bib  Dockerfile  Makefile  README  README.md  main.py  ms.bib  ms.tex  requirements.txt  san_1d.py  san_2d.py  setup.py  utilities.py  utilities_1d.py  utilities_2d.py
.github/workflows/: reproducible-build.yml  tests.yml  workflow.yml
checks/default/: default.nix
docs/: Makefile  index.html  noisyOneMotif.js  sanConvEncoder.js  sanResize.js  script.js  style.css
latex/: Makefile  ms.tex
latex/python/: flake.nix  main.html  main.py  pyproject.toml
paper/: ms.tex
python/: main.py  pyproject.toml  requirements.txt
