[project]
name = "UNKNOWN"
version = "0.0.0"
dependencies = [
	"Jinja2==3.1.2",
	"wfdb==4.1.0",
]

[project.optional-dependencies]
dev = [
	"mypy==1.1.1",
	"ruff==0.0.257",
]

[tool.mypy]
cache_dir = "bin/check"
ignore_missing_imports = true
install_types = true
non_interactive = true
strict = true

[tool.ruff]
select = ["A", "ANN", "ARG", "B", "BLE", "C", "C40", "C90", "COM", "DJ", "DTZ", "E", "EM", "ERA", "EXE", "F", "FBT", "G", "I", "ICN", "INP", "ISC", "N", "NPY", "PD", "PGH", "PIE", "PL", "PT", "PTH", "PYI", "Q", "RET", "RSE", "RUF", "S", "SLF", "SIM", "T10", "T20", "TCH", "TID", "TRY", "UP", "YTT", "W"]
ignore = ["E501", "S101"]
fix = true
cache-dir = "bin/check/ruff"

[tool.ruff.flake8-quotes]
inline-quotes = "single"
