[project]
dependencies = [
  "wfdb==4.1.2"
]
name = "UNKNOWN"
version = "0.0.0"

[project.optional-dependencies]
dev = [
  "check-python-script@https://api.github.com/repos/pbizopoulos/check-python-script/tarball/05c76d3#subdirectory=python",
  "coverage==7.5.3",
  "djlint==1.34.1",
  "mypy==1.10.0",
  "ruff==0.4.7",
  "toml-sort==0.23.1"
]
