[project]
dependencies = [
  "wfdb==4.1.2"
]
name = "UNKNOWN"
version = "0.0.0"

[project.optional-dependencies]
dev = [
  "check-python-script@https://api.github.com/repos/pbizopoulos/check-python-script/tarball/6b4fdb7#subdirectory=python",
  "coverage==7.5.4",
  "djlint==1.34.1",
  "mypy==1.10.1",
  "ruff==0.5.0",
  "toml-sort==0.23.1"
]
